# Prism-TUI

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  error.rs  main.rs  message.rs  theme.rs  update.rs
src/actions/: file_ops.rs  launch.rs  mod.rs
src/data/: accounts.rs  app_config.rs  config.rs  groups.rs  instance.rs  logs.rs  mod.rs  servers.rs
src/tui/: events.rs  mod.rs  terminal.rs
src/view/: accounts.rs  details.rs  help.rs  instances.rs  logs.rs  mod.rs  servers.rs
